--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,11 +1,15 @@
 body{
-    background-color: rgb(180, 180, 180);
+    background-color: white;
 }
 nav{
     width: 100%;
-    background-color: white;
+    background-color: rgb(226, 130, 130);
+    height: 6vh;
+    padding-top: 2em;
+
 }
 nav ul{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    background-color: red;
 }
