--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,15 +1,177 @@
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Source+Sans+Pro&display=swap');
+/* helpers */
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.padding{
+    padding: 1em;
+}
+/* html*/
+html,
 body{
-    background-color: white;
+    height: 100%;
+}
+.brand-logo{
+    margin-left: 3em;
+    height: 100%;
 }
 nav{
-    width: 100%;
-    background-color: rgb(226, 130, 130);
-    height: 6vh;
-    padding-top: 2em;
-
+    background-color: #7A2238;
 }
-nav ul{
+nav img{
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    border-radius: 100px;
+}
+.option-container{
     display: flex;
     flex-direction: row;
-    background-color: red;
+    justify-content: space-evenly;
 }
+.page-footer{
+    background-color:  #7A2238;
+}
+.button{
+    width: 20%;
+    border: solid #7A2238;
+    background-color: white;
+    color: #7A2238;
+    font-size: 28px;
+    margin-bottom: 1em;
+}
+.button:hover{
+    background-color:  #0A3240;
+    color: white;
+}
+main{
+    text-align: center;
+    font-family: 'Bebas Neue', cursive;
+    color: white
+}
+header h4{
+    font-family: 'Source Sans Pro', sans-serif;
+}
+.box-wrapper{
+    border-radius: 20px 20px 20px 20px;
+    width: 600px;
+}
+.img-content{
+    position: relative;
+}
+.img-content h1{
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+}
+.box-wrapper img{
+    border-radius: 20px 20px 0 0;
+    width: 100%;
+}
+.info-content{
+    border: solid grey;
+}
+.parallax-container{
+    position: relative;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-size: 30px;
+}
+.parallax-content{
+    position: absolute;
+    height: 100%;
+    right: 0;
+    background-color: white;
+    border-left: solid rgb(170, 85, 6);
+    width: 30%;
+  }
+.parallax-header{
+    height: 100%;
+}
+#map {
+    height: 400px;  /* The height is 400 pixels */
+    width: 100%;  /* The width is the width of the web page */
+   }
+
+/* Border Fade */
+.hvr-border-fade {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow;
+    transition-property: box-shadow;
+    box-shadow: inset 0 0 0 4px #e1e1e1, 0 0 1px rgba(0, 0, 0, 0);
+    border-radius: 20px;
+    /* Hack to improve aliasing on mobile/tablet devices */
+  }
+  .hvr-border-fade:hover, .hvr-border-fade:focus, .hvr-border-fade:active {
+    box-shadow: inset 0 0 0 4px #0A3240, 0 0 1px rgba(0, 0, 0, 0);
+    /* Hack to improve aliasing on mobile/tablet devices */
+  }
+
+  /* Sweep To Top */
+.hvr-sweep-to-top {
+    display: inline-block;
+    border-radius: 0 0 20px 20px;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+  .hvr-sweep-to-top:before {
+    content: "";
+    border-radius: 0 0 20px 20px;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #0A3240;
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+    -webkit-transform-origin: 50% 100%;
+    transform-origin: 50% 100%;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .hvr-sweep-to-top:hover, .hvr-sweep-to-top:focus, .hvr-sweep-to-top:active {
+    color: white;
+  }
+  .hvr-sweep-to-top:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  /* Grow Shadow */
+.hvr-grow-shadow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transform;
+  }
+  .hvr-grow-shadow:hover, .hvr-grow-shadow:focus, .hvr-grow-shadow:active {
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+  
